Completely fix the asset_store_server api, all tests work properly now
